examples/v42/client/README.md
# Client examples (v42 — canonical baseline)

Python library usage — `dhis2w-client` + `dhis2w-core.client_context.open_client()` — for callers embedding the DHIS2 client inside a larger application. Every example reads the active DHIS2 profile (via env or TOML) and runs against a v42 DHIS2 stack. v42 is the canonical baseline; v41 and v43 mirror most examples in their own trees.

> **Canonical catalogue**: [`docs/examples.md`](../../../docs/examples.md) — full catalogue of every v42 example with links to the concept docs that explain each one.

## Prerequisites

```bash
make dhis2-run                                       # DHIS2 v42 + seeded auth
set -a; source infra/home/credentials/.env.auth; set +a

# Create a profile once — examples resolve it automatically via DHIS2_PROFILE / TOML discovery.
dhis2 profile add local --url http://localhost:8080 --auth pat --default --verify
```

## Running one

```bash
uv run python examples/v42/client/whoami.py
```

Examples that need `DHIS2_OAUTH_*` env (the OIDC flow) say so in their docstring.

## Entry points

- `dhis2w_client.Dhis2Client(url, auth)` — the top-level async client (v42-typed). Runtime dispatch swaps accessors to v41 / v43 when connected to those servers; static typing sees the v42 shape.
- `dhis2w_core.client_context.open_client(profile)` — profile-aware context manager. Most examples use this.
- `dhis2w_core.v42.plugins.<name>.service.*` — service-layer functions for operations that have a typed CLI/MCP surface (metadata import/diff/patch, user admin, …). See `metadata_export_import.py` / `metadata_diff.py` / `metadata_patch.py` for the pattern.

See the [client library tutorial](../../../docs/guides/client-tutorial.md) for a narrative walkthrough of the main entry points.

## v43 schema deltas, read-side

DHIS2 v43 differs from v42 in a handful of resource shapes — `DashboardItem.user` becomes `users`, `TrackedEntityAttribute.favorite` becomes `favorites`, `Section.user` and `Program.favorite` are removed, three top-level resources are dropped, and ~20 new fields appear across Program / EventVisualization / Map / TrackedEntityAttribute. The full per-resource diff is at [`docs/architecture/schema-diff-v41-v42-v43.md`](../../../docs/architecture/schema-diff-v41-v42-v43.md); the narrative + access patterns are at [`docs/architecture/versioning.md`](../../../docs/architecture/versioning.md).

Read-side examples (parsing v43 wire data through v42-pinned helpers + `model_extra`):

| Example | Schema / change kind |
| --- | --- |
| `dashboard_item_users.py` | `DashboardItem.user` -> `users` (rename + reshape: `Reference` -> `list[User]`) |
| `tracked_entity_attribute_favorites.py` | `TrackedEntityAttribute.favorite` -> `favorites` (rename + reshape) + 6 new search fields |
| `event_visualization_fix_headers.py` | `EventChart` / `EventReport` / `EventVisualization` add `fixColumnHeaders`, `fixRowHeaders`, `hideEmptyColumns` |
| `map_basemaps.py` | `Map.basemaps` v43-only addition (collection of `Basemap`) |
| `section_user_removed.py` | `Section.user` removed in v43 (also `Section.favorite`) |
| `removed_resources.py` | `pushAnalysis`, `externalFileResource`, `dataInputPeriods` removed in v43 |

Write-side examples for v43-only setters live under `examples/v43/client/` because they need the v43-pinned client class for static typing.
